--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1> Salut,<br>
             Je suis <span>Ousmane Ba</span><br>
             Développeuse<br>
-            <span>Front-end</span></h1>
+            <span>Web</span></h1>
        <p> Actuellement  en  licence Informatique de Gestion, je suis étudiante souhaitant se spécialisant dans le développement web et mobile. J’oriente mes études dans ce domaine, guidé par mon désir d'apprendre et ma curiosité. En tant que passionné, j’aime participer activement aux activités d’une entreprise, mais aussi créer des projets personnels, dans le but d'augmenter en compétences.
 
         Le développement web et mobile est apparu comme une évidence lors de mes formations. Créer des applications web toujours plus durables, soucieuses de l'experience utilisateur et de plus en plus performantes, est un enjeu actuel très important et d'avenir. Le mobile change notre quotidien, il y prend une place de plus en plus importante. Je veux prendre part à ce changement.
